--- a/dummm.html
+++ b/dummm.html
@@ -1,94 +1,117 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AGV Technical Specifications</title>
-<style>
-  body {
-    font-family: "Poppins", Arial, sans-serif;
-    background-color: #f9f9f9;
-    padding: 20px;
-  }
-
-  h2 {
-    text-align: center;
-    color: #1b4b72;
-    margin-bottom: 20px;
-  }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    border-radius: 8px;
-    overflow: hidden;
-  }
-
-  th, td {
-    padding: 12px 16px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
-
-  th {
-    background-color: #1b4b72;
-    color: #fff;
-    font-weight: 600;
-    text-transform: uppercase;
-    font-size: 14px;
-  }
-
-  tr:hover {
-    background-color: #f1f7ff;
-  }
-
-  td:first-child {
-    font-weight: 600;
-    color: #1b4b72;
-    width: 5%;
-  }
-
-  td:nth-child(2) {
-    width: 30%;
-  }
-
-  td:nth-child(3) {
-    width: 65%;
-  }
-
-  @media (max-width: 768px) {
-    table, th, td {
-      font-size: 13px;
-    }
-  }
-</style>
-</head>
-<body>
-
-<h2>AGV Technical Specifications</h2>
-
-<table>
-  <tr><th>No.</th><th>Specification</th><th>Details</th></tr>
-  <tr><td>1</td><td>Vehicle Size (L×W×H), mm</td><td>≤8000 × 2200 × 800mm</td></tr>
-  <tr><td>2</td><td>Navigation Method</td><td>QR Code + Laser</td></tr>
-  <tr><td>3</td><td>Control Method</td><td>Automatic Operation + Manual Remote Control</td></tr>
-  <tr><td>4</td><td>Rated Load</td><td>65000 Kg</td></tr>
-  <tr><td>5</td><td>AGV Dead Weight</td><td>20000 Kg</td></tr>
-  <tr><td>6</td><td>Maximum Running Speed, m/min</td><td>Speed is adjustable within 0–30 m/min</td></tr>
-  <tr><td>7</td><td>Positioning and Stop Accuracy (navigation and parking)</td><td>±10 mm</td></tr>
-  <tr><td>8</td><td>Mode of Movement</td><td>Forward, backward, lateral movement, self-rotation</td></tr>
-  <tr><td>9</td><td>Slope Climbing Capability / Ground Flatness</td><td>≤3°</td></tr>
-  <tr><td>10</td><td>Working Noise, dB</td><td>≤75</td></tr>
-  <tr><td>11</td><td>Communication Method</td><td>Wireless AP, Wireless Ethernet</td></tr>
-  <tr><td>12</td><td>Alarm Form</td><td>Audio and Visual Alarms</td></tr>
-  <tr><td>13</td><td>Battery Type</td><td>Lithium Battery</td></tr>
-  <tr><td>14</td><td>Battery Capacity</td><td>No less than 210Ah 96V</td></tr>
-  <tr><td>15</td><td>Operation Voltage</td><td>DC 96V</td></tr>
-  <tr><td>16</td><td>Charging Method</td><td>Online automatic charging for 24-hour operation; manual charging also available.</td></tr>
-  <tr><td>17</td><td>Safety Protection System</td><td>Non-contact safety anti-collision, buzzer (adjustable 30–60 dB), indicating lamp, dual-circuit emergency stop button</td></tr>
-</table>
-
-</body>
-</html>
+<div class="client-logo "><img src="img/solar/n1.png" alt="WAAREE" title="WAAREE" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/n2.png" alt="Adani" title="Adani" class="w-100">
+                </div>
+                <div class="client-logo ">
+                   <img src="img/solar/tata-solar.png" alt="Tata Solar" title="Tata Solar" class="w-100"> 
+                </div>
+                <div class="client-logo ">
+                   <img src="img/solar/vikram-solar.png" alt="Vikram Solar" title="Vikram Solar" class="w-100"> 
+                </div>
+                <div class="client-logo "><img src="img/solar/n4.png" alt="Saatvik Green Energy" title="Saatvik Green Energy" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s11.png" alt="SOVA Solar" title="SOVA Solar" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/n5.png" alt="Gautam Solar" title="Gautam Solar" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/a3.png" alt="Cosmic" title="Cosmic" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/t5.png" alt="IAA Solar Panels" title="IAA Solar Panels" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s5.png" alt="Bluebird" title="Bluebird" class="w-100">
+                </div>
+                <div class="client-logo ">
+                <img src="img/solar/a5.png" alt="JAKSON Empowering People" title="JAKSON Empowering People" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/n9.png" alt="Ritika Powering Lives Since 1985" title="Ritika Powering Lives Since 1985" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s10.png" alt="HVR" title="HVR" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s8.png" alt="Solarium" title="Solarium" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/n7.png" alt="HR Solar Solution" title="HR Solar Solution" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/n8.png" alt="Patanjali Anant Urja Srot" title="Patanjali Anant Urja Srot" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/a1.png" alt="EASY|SOLAR" title="EASY|SOLAR" class="w-100">
+                </div>
+                <div class="client-logo ">
+                <img src="img/solar/a6.png" alt="LUNO" title="LUNO" class="w-100">
+                </div>
+                <div class="client-logo ">
+                <img src="img/solar/a7.png" alt="NEOSOL" title="NEOSOL" class="w-100">
+                </div>
+                <div class="client-logo ">
+                 <img src="img/solar/b2.png" alt="INTER SOLAR" title="INETER SOLAR" class="w-100">   
+                </div>
+                <div class="client-logo ">
+                  <img src="img/solar/b8.png" alt="Alpex" title="Alpex" class="w-100">  
+                </div>
+                <div class="client-logo ">
+                 <img src="img/solar/b5.png" alt="Australian Premium Solar" title="Australian Premium Solar" class="w-100">   
+                </div>
+                <div class="client-logo ">
+                  <img src="img/solar/b7.png" alt="Greenbrilliance" title="Greenbrilliance" class="w-100">  
+                </div> 
+                <div class="client-logo ">
+                 <img src="img/solar/a11.png" alt="SASA" title="SASA" class="w-100">       
+                </div>
+                <div class="client-logo ">
+                 <img src="img/solar/b3.png" alt="SUNBOND" title="SUNBOND" class="w-100">   
+                </div>
+                <div class="client-logo ">
+                   <img src="img/solar/c6.png" alt="Redren" title="Redren" class="w-100"> 
+                </div>
+                <div class="client-logo "><img src="img/solar/a10.png" alt="Bradpower Brightening Life" title="Bradpower Brightening Life" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/t9.png" alt="SuryaKamal" title="SuryaKamal" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/t2.png" alt="NEASE" title="NEASE" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s6.png" alt="ECE India" title="ECE India" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s12.png" alt="Nyalkaran Energy LLP" title="Nyalkaran Energy LLP" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s3.png" alt="NOVA" title="NOVA" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/t1.png" alt="Sunlight Infra Energy Pvt. Ltd." title="Sunlight Infra Energy Pvt. Ltd." class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/t3.png" alt="SUNIFY" title="SUNIFY" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/n10.png" alt="Himalayan Solar" title="Himalayan Solar" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/n6.png" alt="Rhine Let's Go Solar" title="Rhine Let's Go Solar" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s1.png" alt="IB Solar" title="IB Solar" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/c5.png" alt="MAXSOLAR" title="MAXSOLAR" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s2.png" alt="Shivalik" title="Shivalik" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s4.png" alt="Novus Green" title="Novus Green" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s7.png" alt="Kaumo Solar" title="Kaumo Solar" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/s9.png" alt="Jyotitech" title="Jyotitech" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/t7.png" alt="Citizen Solar" title="Citizen Solar" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/t10.png" alt="AMRUT ENERGY" title="AMRUT ENERGY" class="w-100">
+                </div>
+                <div class="client-logo "><img src="img/solar/a2.png" alt="plaza Solar" title="Plaza Solar" class="w-100">
+                </div>
+                <div class="client-logo ">
+                <img src="img/solar/a9.png" alt="SolarMaxx" title="SolarMaxx" class="w-100">
+                </div>
+                <div class="client-logo ">
+                  <img src="img/solar/a12.png" alt="Powertrac" title="Powertrac" class="w-100">  
+                </div>
+                <div class="client-logo ">
+                  <img src="img/solar/b4.png" alt="SENZA SOLAR" title="SENZA SOLAR" class="w-100">  
+                </div>               
+                <div class="client-logo ">
+                  <img src="img/solar/b11.png" alt="Shivam Photovoltaics" title="Shivam Photovoltaics" class="w-100">  
+                </div>
+                <div class="client-logo ">
+                   <img src="img/solar/c8.png" alt="Jain Irrigation System Ltd." title="Jain Irrigation System Ltd." class="w-100"> 
+                </div>
