--- a/lithium-cells.html
+++ b/lithium-cells.html
@@ -379,11 +379,11 @@
     <p>18650 / 21700 / 26650 / 32700 / 32140 / 33140</p>
     <h3 class="font-weight-600 text-center"><u>Our Suppliers</u></h3>
     <div class="cylindrical-logos">
-      <img src="img/lithium-cells/fb.png" alt="">
-      <img src="img/lithium-cells/bak.png" alt="">
-      <img src="img/lithium-cells/gotion.png" alt="">
-      <img src="img/lithium-cells/dmfgc.png" alt="">
-      <img src="img/lithium-cells/ten-power.png" alt="">
+      <img src="img/lithium-cells/fb.png" alt="FB Technology" title="FB Technology">
+      <img src="img/lithium-cells/bak.png" alt="Bak" title="Bak">
+      <img src="img/lithium-cells/gotion.png" alt="Gotion" title="Gotion">
+      <img src="img/lithium-cells/dmfgc.png" alt="DMEGC" title="DMEGC">
+      <img src="img/lithium-cells/ten-power.png" alt="Tenpower" title="Tenpower">
     </div>
   </div>
  </div>
@@ -393,6 +393,17 @@
     <h2 class="header-text text-lght">Prismatic Cells</h2> <br>
     <h3 class="font-weight-600">Available Modles</h3>
     <p>100AH - 680AH</p>
+    <h3 class="font-weight-600 text-center"><u>Our Suppliers</u></h3>
+    <div class="cylindrical-logos">
+      <img src="img/lithium-cells/p-cell-1.png" alt="Eve Energy" title="Eve Energy">
+      <img src="img/lithium-cells/p-cell-2.png" alt="Highstar" title="Highstar">
+      <img src="img/lithium-cells/p-cell-3.png" alt="Gangfeng" title="Gangfeng">
+      <img src="img/lithium-cells/p-cell-4.png" alt="Svolt" title="Svolt">
+      <img src="img/lithium-cells/p-cell-5.png" alt="Narada" title="Narada">
+      <img src="img/lithium-cells/p-cell-6.png" alt="Calb" title="Calb">
+      <img src="img/lithium-cells/p-cell-7.png" alt="Catl" title="Catl">
+      <img src="img/lithium-cells/p-cell-8.png" alt="Rept Battero" title="Rept Battero">
+    </div>
   </div>
  </div>
   <!-- Footer -->
