--- a/index.html
+++ b/index.html
@@ -1340,6 +1340,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
         <div class="mobility-item"><img src="img/e-mobility/add-5.png" alt="Neuron" title="Neuron" class="w-100"></div>
         <div class="mobility-item"><img src="img/e-mobility/add-6.png" alt="Pulze" title="Pulze" class="w-100"></div>
         <div class="mobility-item"><img src="img/e-mobility/add-7.png" alt="Powermetz" title="Powermetz" class="w-100"></div>
+        <div class="mobility-item"><img src="img/e-mobility/voltters.png" alt="voltters" title="voltters" class="w-100"></div>
 
 
 
@@ -1534,6 +1535,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
         <div class="client-logo"><img src="img/e-mobility/add-5.png" alt="Neuron" title="Neuron" class="w-100"></div>
         <div class="client-logo"><img src="img/e-mobility/add-6.png" alt="Pulze" title="Pulze" class="w-100"></div>
         <div class="client-logo"><img src="img/e-mobility/add-7.png" alt="Powermetz" title="Powermetz" class="w-100"></div>
+        <div class="client-logo"><img src="img/e-mobility/voltters.png" alt="voltters" title="voltters" class="w-100"></div>
 
 
     </div>
