--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -379,7 +379,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Copper Foil in India"><img src="img/copper-foil.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India"></a>
+        ><img src="img/copper-foil.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Copper Foil</h5>
@@ -394,7 +394,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Aluminum Foil in India"><img src="img/aluminum-foil.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India"></a>
+        <img src="img/aluminum-foil.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Aluminum Foil</h5>
@@ -410,7 +410,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="LIB Separator Film in India"><img src="img/lib-seperator-film.png" class="card-img-top product-img" alt="LIB Separator Film in India" title="LIB Separator Film in India"></a>
+        <img src="img/lib-seperator-film.png" class="card-img-top product-img" alt="LIB Separator Film in India" title="LIB Separator Film in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">LIB Separator Film</h5>
@@ -431,7 +431,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="electrolyte.html" title="Electrolyte in India"><img src="img/electrolute.png" class="card-img-top product-img" alt="Electrolyte in India" title="Electrolyte in India"></a>
+        <img src="img/electrolute.png" class="card-img-top product-img" alt="Electrolyte in India" title="Electrolyte in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Electrolyte</h5>
