--- a/bess-cooling-system.html
+++ b/bess-cooling-system.html
@@ -373,7 +373,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="75KW Chiller in India"><img src="img/75-kw.png" class="card-img-top product-img" alt="75KW Chiller in India" title="75KW Chiller in India"></a>
+        <img src="img/75-kw.png" class="card-img-top product-img" alt="75KW Chiller in India" title="75KW Chiller in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">75KW Chiller</h5>
@@ -388,7 +388,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="90KW Chiller in India"><img src="img/90kw.png" class="card-img-top product-img" alt="90KW Chiller in India" title="90KW Chiller in India"></a>
+        <img src="img/90kw.png" class="card-img-top product-img" alt="90KW Chiller in India" title="90KW Chiller in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">90KW Chiller</h5>
@@ -403,7 +403,7 @@
     <!-- Card 3 -->
          <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="XFreeCooling Dual-Circuit Chiller in India"><img src="img/xfree-cooling.png" class="card-img-top product-img" alt="XFreeCooling Dual-Circuit Chiller in India" title="XFreeCooling Dual-Circuit Chiller in India"></a>
+        <img src="img/xfree-cooling.png" class="card-img-top product-img" alt="XFreeCooling Dual-Circuit Chiller in India" title="XFreeCooling Dual-Circuit Chiller in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">XFree Cooling Dual - Circuit Chiller</h5>
@@ -421,7 +421,7 @@
   <div class="row g-4">
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Door Mounted Chiller in India"><img src="img/door-mounted.png" class="card-img-top product-img" alt="Door Mounted Chiller in India" title="Door Mounted Chiller in India"></a>
+        <img src="img/door-mounted.png" class="card-img-top product-img" alt="Door Mounted Chiller in India" title="Door Mounted Chiller in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Door Mounted Chiller</h5>
@@ -435,7 +435,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Horizontal Embedded Chiller in India"><img src="img/hoizon.png" class="card-img-top product-img" alt="Horizontal Embedded Chiller in India" title="Horizontal Embedded Chiller in India"></a>
+        <img src="img/hoizon.png" class="card-img-top product-img" alt="Horizontal Embedded Chiller in India" title="Horizontal Embedded Chiller in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Horizontal Embedded Chiller</h5>
@@ -452,7 +452,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Ultra-Thin Dehumidifier in India"><img src="img/ultra-thin.png" class="card-img-top product-img" alt="Ultra-Thin Dehumidifier in India" title="Ultra-Thin Dehumidifier in India"></a>
+        <img src="img/ultra-thin.png" class="card-img-top product-img" alt="Ultra-Thin Dehumidifier in India" title="Ultra-Thin Dehumidifier in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Ultra - Thin Dehumidifier</h5>
