--- a/other-machines.html
+++ b/other-machines.html
@@ -382,7 +382,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Automatic Pasting Machine in India"><img src="img/automatic-pasting-machine.png" class="card-img-top product-img" alt="Automatic Pasting Machine in India" title="Automatic Pasting Machine in India"></a>
+        <img src="img/automatic-pasting-machine.png" class="card-img-top product-img" alt="Automatic Pasting Machine in India" title="Automatic Pasting Machine in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Automatic Paper Pasting Machine </h5>
