--- a/laser-welding-machines.html
+++ b/laser-welding-machines.html
@@ -380,7 +380,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="3KW Laser Welding Machine in India"><img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="3KW Laser Welding Machine in India" title="3KW Laser Welding Machine in India"></a>
+        <img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="3KW Laser Welding Machine in India" title="3KW Laser Welding Machine in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">3KW <br>(Laser Welding Machine)</h5>
@@ -396,7 +396,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="4KW Laser Welding Machine in India"><img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="4KW Laser Welding Machine in India" title="4KW Laser Welding Machine in India"></a>
+        <img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="4KW Laser Welding Machine in India" title="4KW Laser Welding Machine in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">4KW <br>(Laser Welding Machine)</h5>
@@ -411,7 +411,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="6KW Laser Welding Machine in India"><img src="img/welding-6kw.png" class="card-img-top product-img" alt="6KW Laser Welding Machine in India" title="6KW Laser Welding Machine in India"></a>
+        <img src="img/welding-6kw.png" class="card-img-top product-img" alt="6KW Laser Welding Machine in India" title="6KW Laser Welding Machine in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">6KW <br>(Laser Welding Machine)</h5>
