--- a/index.html
+++ b/index.html
@@ -505,10 +505,10 @@ Your browser does not support the video tag.
 <span><a href="#" class="count-in">Let the sun do the work</a></span>
 <div class="btn-box">
 <ul>
-<li class="list-inline-item mb-3"><a href="#" title="Solar Cell Production Lines"> Solar Cell Production Lines</a></li>
-<li class="list-inline-item mb-3"><a href="#" title="Solar Panel Production Lines"> Solar Panel Production Lines</a></li>
-<li class="list-inline-item mb-3"><a href="#" title="Solar PV Raw Materials"> Solar PV Raw Materials</a></li>
-<li class="list-inline-item mb-3"><a href="#" title="Solar EPC Components"> Solar EPC Components</a></li>
+<li class="list-inline-item mb-3"><a href="solar-cell-production-lines.html" title="Solar Cell Production Lines"> Solar Cell Production Lines</a></li>
+<li class="list-inline-item mb-3"><a href="solar-panel-production-lines.html" title="Solar Panel Production Lines"> Solar Panel Production Lines</a></li>
+<li class="list-inline-item mb-3"><a href="raw-materials.html" title="Solar PV Raw Materials"> Solar PV Raw Materials</a></li>
+<li class="list-inline-item mb-3"><a href="solar-epc-components.html" title="Solar EPC Components"> Solar EPC Components</a></li>
 </ul>
 </div>
 </div>
@@ -530,10 +530,10 @@ Your browser does not support the video tag.
 <span><a href="#" class="count-in">Future is Electric</a></span>
 <div class="btn-box">
 <ul>
-<li class="list-inline-item mb-3"><a href="#"> Lithium Cell Production Lines</a></li>
-<li class="list-inline-item mb-3"><a href="#" title="Lithium Battery Pack Production Lines"> Lithium Battery Pack Production Lines</a></li>
+<li class="list-inline-item mb-3"><a href="lithium-cell-lines.html"> Lithium Cell Production Lines</a></li>
+<li class="list-inline-item mb-3"><a href="lithium-batteries-lines.html" title="Lithium Battery Pack Production Lines"> Lithium Battery Pack Production Lines</a></li>
 <li class="list-inline-item mb-3"><a href="#"> Lithium Battery Separator Production Lines</a></li>
-<li class="list-inline-item mb-3"><a href="#" title="Lithium Battery Raw Material Components"> Lithium Battery Raw Material Components</a></li>
+<li class="list-inline-item mb-3"><a href="lithium-battery-raw-material.html" title="Lithium Battery Raw Material Components"> Lithium Battery Raw Material Components</a></li>
 </ul>
 </div>
 </div>
