--- a/lithium-batteries-lines.html
+++ b/lithium-batteries-lines.html
@@ -649,7 +649,7 @@
 </div>
 <div class="modal-body" id="popup-form">
 
-<p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <span class="font-weight-bold">+91 9958795999 </span></p>
+<p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <br><span class="font-weight-bold">+91 9958795999 </span></p>
 
 <form action="#" method="post">
 <p id="popupsuccessmsg"></p>
