--- a/about-us.html
+++ b/about-us.html
@@ -591,7 +591,7 @@ Balancing her professional and personal life with ease, Harleen is also a mother
 </div>
 <div class="modal-body" id="popup-form">
 
-<p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <span class="font-weight-bold">+91 9958795999 </span></p>
+<p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <br><span class="font-weight-bold">+91 9958795999 </span></p>
 
 <form action="#" method="post">
 <p id="popupsuccessmsg"></p>
