--- a/solar-epc-components.html
+++ b/solar-epc-components.html
@@ -516,7 +516,7 @@ solar encapsulant, solar EVA encapsulant, POE solar encapsulant, EPE solar encap
 </div>
 <div class="modal-body" id="popup-form">
 
-<p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <span class="font-weight-bold">+91 9958795999 </span></p>
+<p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <br><span class="font-weight-bold">+91 9958795999 </span></p>
 
 <form action="#" method="post">
 <p id="popupsuccessmsg"></p>
