--- a/bess-container-assembly-lines.html
+++ b/bess-container-assembly-lines.html
@@ -69,7 +69,7 @@
 
 <div class="col-md-4 text-left">
 <ul>
-<li class="list-inline-item border-0"><a href="#"><i class="fa fa-linkedin text-white" aria-hidden="true"></i></a></li>
+<li class="list-inline-item border-0"><a href="https://www.linkedin.com/company/indygreen-technologies/" target="_blank"><i class="fa fa-linkedin text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
