--- a/solar-epc-components.html
+++ b/solar-epc-components.html
@@ -68,7 +68,7 @@ solar encapsulant, solar EVA encapsulant, POE solar encapsulant, EPE solar encap
 <div class="row">
 <div class="col-md-8 text-center">
 <ul class="text-right">
-<li class="pr-3 list-inline-item"><a href="tel:+91 9958795999" title="+91 9958795999" class="text-white"><i class="fa fa-phone" aria-hidden="true"></i> +91 9958795999, </a> 
+<li class="pr-3 list-inline-item"><a href="tel:+91-9958795999" title="+91-9958795999" class="text-white"><i class="fa fa-phone" aria-hidden="true"></i> +91-9958795999, </a> 
 <a href="tel:+91 11 41603213" class="text-white" title="+91 11 41603213">+91 11 41603213</a> </li>
 
 <li class="pr-3 list-inline-item"><a href="mailto:info@indygreentech.com" class="text-white" title="info@indygreentech.com"> <i class="fa fa-envelope" aria-hidden="true"></i> info@indygreentech.com</a></li>
@@ -490,7 +490,7 @@ solar encapsulant, solar EVA encapsulant, POE solar encapsulant, EPE solar encap
 <div class="container-fluid">
 <div class="row">
 <ul class="w-100">
-<li><a href="tel:+91 9958795999" title="Call Us"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</a></li>
+<li><a href="tel:+91-9958795999" title="Call Us"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</a></li>
 <li><a href="https://api.whatsapp.com/send?phone=+919958795999&amp;text=Hello%20Indygreen%20Technologies%2C%20would%20like%20to%20know%20more%20details%20about%20your%20Services%2C%20Please%20send%20more%20details." target="_blank" id="toggle1" class="wtsapp." target="_blank" title="Whats App"><i class="fa fa-whatsapp" aria-hidden="true"></i> Whats App</a></li>
 
 <li><a href="#" onclick="gtag_report_conversion()" class="p-0" data-toggle="modal" data-target="#exampleModal-two" title="Enquiry"><i class="fa fa-file-text-o" aria-hidden="true"></i> Enquiry</a></li>
@@ -516,7 +516,7 @@ solar encapsulant, solar EVA encapsulant, POE solar encapsulant, EPE solar encap
 </div>
 <div class="modal-body" id="popup-form">
 
-<p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <br><span class="font-weight-bold">+91 9958795999 </span></p>
+<p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <br><span class="font-weight-bold">+91-9958795999 </span></p>
 
 <form action="#" method="post">
 <p id="popupsuccessmsg"></p>
