--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class="row">
 <div class="col-md-8 text-center">
 <ul class="text-right">
-<li class="pr-3 list-inline-item"><a href="tel:+91 9958795999" title="+91 9958795999" class="text-white"><i class="fa fa-phone" aria-hidden="true"></i> +91 9958795999, </a> 
+<li class="pr-3 list-inline-item"><a href="tel:+91-9958795999" title="+91-9958795999" class="text-white"><i class="fa fa-phone" aria-hidden="true"></i> +91-9958795999, </a> 
 <a href="tel:+91 11 41603213" class="text-white" title="+91 11 41603213">+91 11 41603213</a> </li>
 
 <li class="pr-3 list-inline-item"><a href="mailto:info@indygreentech.com" class="text-white" title="info@indygreentech.com"> <i class="fa fa-envelope" aria-hidden="true"></i> info@indygreentech.com</a></li>
@@ -1634,7 +1634,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <div class="icon-box">
 <div class="icon"><img src="img/call.png" alt="Contact Person" title="Contact Person"></div>
 <h4>Phone</h4>
-<div class="text"><a href="tel:+91 9958795999"> +91 9958795999,</a> <a href="tel:+911141603213" title="11 41603213">11 41603213</a> </div>
+<div class="text"><a href="tel:+91-9958795999"> +91-9958795999,</a> <a href="tel:+911141603213" title="11 41603213">11 41603213</a> </div>
 </div>
 
 <div class="icon-box">
@@ -1754,7 +1754,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <div class="container-fluid">
 <div class="row">
 <ul class="w-100">
-<li><a href="tel:+91 9958795999" title="Call Us"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</a></li>
+<li><a href="tel:+91-9958795999" title="Call Us"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</a></li>
 <li><a href="https://api.whatsapp.com/send?phone=+919958795999&amp;text=Hello%20Indygreen%20Technologies%2C%20would%20like%20to%20know%20more%20details%20about%20your%20Services%2C%20Please%20send%20more%20details." target="_blank" id="toggle1" class="wtsapp." target="_blank" title="Whats App"><i class="fa fa-whatsapp" aria-hidden="true"></i> Whats App</a></li>
 
 <li><a href="#" onclick="gtag_report_conversion()" class="p-0" data-toggle="modal" data-target="#exampleModal-two" title="Enquiry"><i class="fa fa-file-text-o" aria-hidden="true"></i> Enquiry</a></li>
@@ -1780,7 +1780,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 <div class="modal-body" id="popup-form">
 
-<p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <br><span class="font-weight-bold">+91 9958795999 </span></p>
+<p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <br><span class="font-weight-bold">+91-9958795999 </span></p>
 
 <form action="#" method="post">
 <p id="popupsuccessmsg"></p>
