--- a/news-and-events.html
+++ b/news-and-events.html
@@ -1,36 +1,39 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Title -->
- <title>Careers at Indygreen Technologies - Join Our Renewable Energy Team</title>
+ <!-- Title Tag -->
+<title>News & Events | Indygreen Technologies – Latest Updates in Solar & Lithium Innovations</title>
 
-  <!-- Meta Description -->
-  <meta name="description" content="Explore career opportunities at Indygreen Technologies. We are hiring passionate professionals in solar, lithium battery, EV mobility, and . Join us and build a sustainable future."/>
+<!-- Meta Description -->
+<meta name="description" content="Stay updated with Indygreen Technologies’ latest news, industry events, and advancements in turnkey solar PV production lines, lithium battery manufacturing, and EV infrastructure solutions in India."/>
 
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="Indygreen Technologies careers, renewable energy jobs, solar jobs India, lithium battery jobs, EV mobility careers, hydrogen energy jobs, green technology jobs, clean energy careers, engineering jobs renewable energy, Indygreentech hiring"/>
+<!-- Meta Keywords -->
+<meta name="keywords" content="Indygreen Technologies news, solar energy events, lithium battery industry updates, renewable energy conferences, turnkey solar manufacturing news, EV charging events, Indygreentech India"/>
 
-  <!-- Robots -->
-  <meta name="robots" content="index, follow"/>
+<!-- Robots Tag -->
+<meta name="robots" content="index, follow"/>
 
-  <!-- Author & Publisher -->
-  <meta name="author" content="Indygreen Technologies"/>
-  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
+<!-- Author & Publisher -->
+<meta name="author" content="Indygreen Technologies"/>
+<meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Careers at Indygreen Technologies - Renewable Energy Jobs"/>
-  <meta property="og:description" content="Join Indygreen Technologies and work on solar, battery, EV, and hydrogen projects. Explore exciting career opportunities today."/>
-  <meta property="og:url" content="https://www.indygreentech.com/career.html"/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="Indygreen Technologies"/>
+<!-- Open Graph (Facebook / LinkedIn) -->
+<meta property="og:title" content="Indygreen Technologies – News & Events"/>
+<meta property="og:description" content="Explore the latest news, media coverage, and events from Indygreen Technologies — pioneers in solar PV, lithium battery, and EV infrastructure solutions in India."/>
+<meta property="og:url" content="https://www.indygreentech.com/news-and-events.html"/>
+<meta property="og:type" content="website"/>
+<meta property="og:site_name" content="Indygreen Technologies"/>
+<!-- Optionally add: <meta property="og:image" content="https://www.indygreentech.com/assets/images/og-news-events.jpg"/> -->
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Careers at Indygreen Technologies - Renewable Energy Jobs"/>
-  <meta name="twitter:description" content="We are hiring! Explore renewable energy job openings in solar, lithium batteries, EV mobility & hydrogen at Indygreen Technologies."/>
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="Indygreen Technologies – News & Events"/>
+<meta name="twitter:description" content="Get the latest updates, media news, and upcoming events from Indygreen Technologies in the renewable energy sector."/>
+<!-- Optionally add: <meta name="twitter:image" content="https://www.indygreentech.com/assets/images/twitter-news-events.jpg"/> -->
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/career.html"/>
+<!-- Canonical -->
+<link rel="canonical" href="https://www.indygreentech.com/news-and-events.html"/>
+
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
