--- a/index.html
+++ b/index.html
@@ -1284,9 +1284,9 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
     <h4 class="text-center w-100 mb-4">E-Mobility</h4>
     <div class="row">
 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 main-item e-mobility-item">
-
-        <div class="mobility-item"><img src="img/e-mobility/logo-4.png" alt="WAAREE|ESS" title="WAAREE|ESS" class="w-100"></div>
-        <div class="mobility-item"><img src="img/e-mobility/bharatcell.png" alt="Bharat Cell" title="Bharat Cell" class="w-100"></div>     
+  <div class="mobility-item"><img src="img/e-mobility/cosmic-battery.png" alt="Cosmic" title="Cosmic" class="w-100"></div>
+        <div class="mobility-item"><img src="img/e-mobility/bharatcell.png" alt="Bharat Cell" title="Bharat Cell" class="w-100"></div>
+        <div class="mobility-item"><img src="img/e-mobility/logo-4.png" alt="WAAREE|ESS" title="WAAREE|ESS" class="w-100"></div>     
         <div class="mobility-item"><img src="img/e-mobility/logo-5.png" alt="BATTRIXX" title="BATTRIXX" class="w-100"></div>    
         <div class="mobility-item"><img src="img/e-mobility/logo-7.png" alt="Ipower" title="Ipower" class="w-100"></div>
         <div class="mobility-item"><img src="img/e-mobility/logo-12.jpg" alt="INVERTED" title="INVERTED" class="w-100"></div> 
@@ -1480,8 +1480,9 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
     <div class="emob col-lg-6">
         <h3>LITHIUM BATTERIES</h3>
     <div class="client-grid emobility-clients">
-      <div class="client-logo"><img src="img/e-mobility/logo-4.png" alt="WAAREE|ESS" title="WAAREE|ESS" class="w-100"></div>
-        <div class="client-logo"><img src="img/e-mobility/bharatcell.png" alt="Bharat Cell" title="Bharat Cell" class="w-100"></div>     
+      <div class="client-logo"><img src="img/e-mobility/cosmic-battery.png" alt="Cosmic" title="Cosmic" class="w-100"></div>
+      <div class="client-logo"><img src="img/e-mobility/bharatcell.png" alt="Bharat Cell" title="Bharat Cell" class="w-100"></div>
+      <div class="client-logo"><img src="img/e-mobility/logo-4.png" alt="WAAREE|ESS" title="WAAREE|ESS" class="w-100"></div>     
         <div class="client-logo"><img src="img/e-mobility/logo-5.png" alt="BATTRIXX" title="BATTRIXX" class="w-100"></div>    
         <div class="client-logo"><img src="img/e-mobility/logo-7.png" alt="Ipower" title="Ipower" class="w-100"></div>
         <div class="client-logo"><img src="img/e-mobility/logo-12.jpg" alt="INVERTED" title="INVERTED" class="w-100"></div> 
