--- a/contact-us.html
+++ b/contact-us.html
@@ -44,6 +44,9 @@
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
+<div id="preloader">
+    <img src="favicon.ico" alt="Loading..." class="loader-icon">
+  </div> 
 <!-- main -->
 <main>
 <section class="top-header py-2">
@@ -701,6 +704,18 @@
 <script type="text/javascript" src="js/custom.js"></script>
 <script type="text/javascript" src="js/ma5-menu.min.js"></script>
 <script type="text/javascript" src="js/animationCounter.min.js"></script>
+<!-- Slider Item-->
+ <script>
+    // Hide preloader when page fully loads
+    window.addEventListener('load', () => {
+      const preloader = document.getElementById('preloader');
+      const content = document.getElementById('content');
+      preloader.classList.add('hidden');
+      setTimeout(() => {
+        content.style.display = 'block';
+      }, 1000); // Match transition duration
+    });
+  </script>
 <!-- Slider Item-->
 </body>
 </html>
