--- a/solar-epc-components.html
+++ b/solar-epc-components.html
@@ -54,6 +54,9 @@ solar encapsulant, solar EVA encapsulant, POE solar encapsulant, EPE solar encap
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
+<div id="preloader">
+    <img src="favicon.ico" alt="Loading..." class="loader-icon">
+  </div> 
 <!-- main -->
 <main>
 <section class="top-header py-2">
@@ -577,5 +580,17 @@ solar encapsulant, solar EVA encapsulant, POE solar encapsulant, EPE solar encap
 <script type="text/javascript" src="js/animationCounter.min.js"></script>
 <!-- Slider Item-->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+ <script>
+    // Hide preloader when page fully loads
+    window.addEventListener('load', () => {
+      const preloader = document.getElementById('preloader');
+      const content = document.getElementById('content');
+      preloader.classList.add('hidden');
+      setTimeout(() => {
+        content.style.display = 'block';
+      }, 1000); // Match transition duration
+    });
+  </script>
+<!-- Slider Item-->
 </body>
 </html>
