--- a/turnkey-assembly-lines.html
+++ b/turnkey-assembly-lines.html
@@ -459,7 +459,7 @@
   <li class="border-bottom"><a href="about-us.html" title="About Us"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
   <li class="border-bottom"><a href="career.html" title="Career"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
   <li class="border-bottom"><a href="news-and-events.html" title="News & Events"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
-  <!-- <li class="border-bottom"><a href="sitemap.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Sitemap  </a></li> -->
+  <li class="border-bottom"><a href="sitemap.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Sitemap  </a></li>
   <!-- <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Our Presence  </a></li> -->
   <li class="border-bottom"><a href="contact-us.html" title="Contact Us"><i class="fa fa-angle-right" aria-hidden="true"></i> Contact Us  </a></li>
   </ul>
