--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Title Tag -->
-  <title>Indygreen Technologies - Turnkey Solar PV & Lithium Battery Production Lines</title>
+  <title>Indygreen Technologies – Solar PV & Battery Production Lines</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies offers turnkey GW-scale Solar PV panel production lines, lithium cell & battery pack production lines, electric charging infrastructure solutions in India."/>
